# first-agent-codex

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
config/topics/: ai.toml
scripts/: setup_windows_task.ps1
src/news_agent/: __init__.py  cli.py  collector.py  config.py  digest.py  emailer.py  openai_ranker.py  settings_app.py
tests/: test_collector.py  test_config.py  test_digest.py  test_emailer.py  test_github_workflow.py  test_scheduler_script.py  test_settings_app.py
