[project]
name = "daily-research-agent"
version = "0.1.0"
description = "A shareable topic-based daily news digest agent powered by OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "flask>=3.0.0",
    "openai>=1.99.0",
    "python-dotenv>=1.0.1",
    "tomli-w>=1.0.0",
]

[project.scripts]
daily-research-agent = "news_agent.cli:main"
daily-research-agent-settings = "news_agent.settings_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
